refactor: add sorted into stream